<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name" tools:ignore="PrivateResource" translatable="false">Put Back</string>

	<string name="notionsSubject">Notions</string>
	<string name="archive">Archive</string>
	<string name="preferences">Preferences</string>
	<string name="archived_message">Notion is now Idle</string>
	<string name="undo">Undo</string>
	<string name="un_archived_message">Notion is active again</string>
	<string name="channel_name" translatable="false">Put-Back Notions Reminder</string>
	<string name="channel_description" translatable="false">This channel is used to deliver notifications for active notions</string>
	<string name="putback">Put Back</string>
	<string name="notion_is_archived">Productivity: 100</string>
	<string name="delete">Delete</string>
	<string name="one">1</string>
	<string name="notion_is_deleted">Notion is deleted.</string>
	<string name="yes">Yes</string>
	<string name="confirm">Are you sure?</string>
	<string name="un_archive">Un-archive</string>
	<string name="content_hint">Notion goes here</string>

	<!--titles-->
	<string name="title_1">Feeling like it?</string>
	<string name="title_2">I have an idea…</string>
	<string name="title_3">Hey, what about…</string>

	<!--comments-->
	<string name="comment_1">A notion\'s been sent to your future self</string>
	<string name="comment_2">Take your time</string>
	<string name="comment_3">No need to rush</string>
	<string name="comment_4" translatable="false">El. Psy. Congroo</string>

	<!--preferences-->
	<string name="donate_summary">This app is totally free, with no ads. But, donations are welcome to support the development.</string>
	<string name="donate">Donate</string>
	<string name="about">About App</string>
	<string name="theme_title">App Theme</string>
	<string name="theme_summary">You\'ll find something that matches your style.</string>
	<string name="notification_sound">Notification Sound</string>
	<string name="notification_summary">Change the notification sound.</string>
	<string name="feedback">Feedback</string>
	<string name="opensource">Licenses</string>
	<string name="developer">Developer</string>
	<string name="developer_summary" translatable="false">mhashim6</string>
	<string name="feedback_summary">Write a review on Google Play.</string>
	<string name="open_source_summary">Open source licenses and credits.</string>
	<string name="rate_app">Rate Put-Back</string>
	<string name="charity">Charity</string>
	<string name="chocolate_for_mom">Get chocolate for mom</string>
	<string name="water_plants">Water the plants</string>
	<string name="later">Later</string>
	<string name="rate_now">Rate</string>
	<string name="rate_message">If you find Put-Back useful, please rate the app on Google Play. Thanks!</string>
	<string name="welcome_message">Welcome to Put-Back!</string>
	<string name="introduction_message">Here you can do things at your own pace.</string>
	<string name="pencil_message">You can use the pencil to write a new notion.</string>
	<string name="archive_tutorial">You can swipe any notion to archive it.</string>
	<string name="long_press_tutorial">You can long-press any notion to delete or archive it.</string>
	<string name="preferences_tutorial">Visit the preferences page to change the theme or the notification sound.</string>
	<string name="goodbye_tutorial">Now, shall we?</string>
	<string name="family_gathering">Family gathering</string>
	<string name="skin_routine">weekly skin routine</string>

	<!--time units-->
	<string-array name="time_unit_array">
		<item>@string/week_plural</item>
		<item>@string/month_plural</item>
		<item>@string/year_plural</item>
		<item>@string/day_plural</item>
	</string-array>

	<string name="year">YEAR</string>
	<string name="year_plural">YEARS</string>

	<string name="month">MONTH</string>
	<string name="month_plural">MONTHS</string>

	<string name="week">WEEK</string>
	<string name="week_plural">WEEKS</string>

	<string name="day">DAY</string>
	<string name="day_plural">DAYS</string>

	<!--dates-->
	<string name="created_at">created at</string>
	<string name="last_run_at">last run at</string>
	<string name="backup_summary">Backup notions to device memory.</string>
	<string name="backup_title">Backup Notions</string>
	<string name="restore_summary">Restore notions from device memory.</string>
	<string name="restore_title">Restore Notions</string>
	<string name="backup_successful">Notions have been sccessfully backed up.</string>
	<string name="restore_successful">Notions are restored from backup.</string>
	<string name="storage_permissions_denied">Storage permissions denied.</string>
	<string name="backup_error">Couldn\'t backup notions.</string>
	<string name="restore_error">Couldn\'t restore notions.</string>


	<!--themes-->
	<string-array name="themes_names">
		<item>Red dust</item>
		<item>Vivid</item>
		<item>Copper</item>
		<item>Predawn</item>
		<item>Dusk</item>
		<item>Bronze atmosphere</item>
		<item>Pink horizon</item>
	</string-array>

	<string-array name="themes_values">
		<item>red_dust</item>
		<item>vivid</item>
		<item>copper</item>
		<item>predawn</item>
		<item>dusk</item>
		<item>bronze_atmosphere</item>
		<item>pink_horizon</item>
	</string-array>
</resources>
